# BioImageOperation

./: .gitignore  BioImageOperation manual.docx  BioImageOperation manual.md  BioImageOperation script.md  BioImageOperation.pro  BioImageOperation.rtf  BioImageOperation.sln  CHANGELOG.md  CITATION.md  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  README.md  Util0.cpp  Util0.h  code license comments.txt  qt opencv linux installation notes.txt  qt opencv linux installation.txt
BioImageOperation/: AboutForm.cpp  AboutForm.h  AboutForm.resx  AboutWindow.cpp  AboutWindow.h  AboutWindow.ui  AccumBuffer.cpp  AccumBuffer.h  Argument.cpp  Argument.h  AssemblyInfo.cpp  AssemblyInfo.h  AverageBuffer.cpp  AverageBuffer.h  Averager.cpp  Averager.h  BackgroundRollingBall.cpp  BackgroundRollingBall.h  BenchMark.cpp  BenchMark.h  BioImageOperation.cpp  BioImageOperation.pri  BioImageOperation.pro  BioImageOperation.qrc  BioImageOperation.rc  BioImageOperation.rc.in  BioImageOperation.vcxproj  BioImageOperation.vcxproj.filters  BioImageOperation_console.vcxproj  BioImageOperation_console.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  CaptureSource.cpp  CaptureSource.h  Cluster.cpp  Cluster.h  ClusterTrack.cpp  ClusterTrack.h  ColorScale.cpp  ColorScale.h  (+107 more)
BioImageOperation/templates/: template_tracking.bioscript
BioImageOperation/video capture testing/cvtest/: cvtest.cpp  cvtest.vcxproj
BioImageOperation/video capture testing/python/: cvtest.py
BioImageOperationSetup/: BioImageOperationSetup.wixproj  Product.wxs
BioImageOperationSetupBootstrapper/: BioImageOperationSetupBootstrapper.wixproj  Bundle.wxs
BioImageOperation_console/: BioImageOperation_console.cpp
Scripts/: accum.bioscript  background_test.bioscript  benchmark.bioscript  benchmark2.bioscript  capture.bioscript  count2.bioscript  count_test2.bioscript  create_background.bioscript  create_background_color.bioscript  optical_correction.bioscript  overlay.bioscript  paths.bioscript  source.bioscript  test_save_video.bioscript  tracks.bioscript
Scripts/video sets/: create single background.bioscript  track example.bioscript  track single background example.bioscript  track single background template.bioscript  track template.bioscript
video capture testing/: cvtest.sln
video capture testing/cvtest/: cvtest.cpp
video capture testing/python/: cvtest.py
